--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Register Form</title>
     <link rel="stylesheet" href="register.css">
 </head>
+
 <body>
     <div class="title">
         <h1>Welcome to our <br> Real Time Forum</h1>
@@ -14,16 +16,16 @@
         <!-- Login Form -->
         <div id="loginForm" class="form-container">
             <h2>Login</h2>
-            <form action="/login" method="POST">
+            <form id="loginFormID">
                 <div class="form-group">
                     <label for="email_username">E-mail or Username</label>
-                    <input type="text" id="email_username" name="email_username" required>
+                    <input type="text" id="email_username" name="identifier" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="passwordLogin" name="password" required>
                 </div>
-                <button type="submit">Login</button>
+                <button id="loginButton" type="submit">Login</button>
             </form>
             <p>Don't have an account? <a href="#" onclick="toggleForms()">Register</a></p>
         </div>
@@ -31,7 +33,7 @@
         <!-- Register Form -->
         <div id="registerForm" class="form-container" style="display: none;">
             <h2>Register</h2>
-            <form action="/submit" method="POST">
+            <form id="registerFormID">
                 <div class="form-group">
                     <label for="nickname">Nickname</label>
                     <input type="text" id="nickname" name="nickname" required>
@@ -50,11 +52,11 @@
                 </div>
                 <div class="form-group">
                     <label for="first_name">First Name</label>
-                    <input type="text" id="first_name" name="first_name" required>
+                    <input type="text" id="first_name" name="firstName" required>
                 </div>
                 <div class="form-group">
                     <label for="last_name">Last Name</label>
-                    <input type="text" id="last_name" name="last_name" required>
+                    <input type="text" id="last_name" name="lastName" required>
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail</label>
@@ -62,9 +64,9 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="passwordRegister" name="password" required>
                 </div>
-                <button type="submit">Register</button>
+                <button id="registerButton" type="submit">Register</button>
             </form>
             <p>Already have an account? <a href="#" onclick="toggleForms()">Login</a></p>
         </div>
@@ -73,4 +75,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
