--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Register Form</title>
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="./static/register.css">
 </head>
 
 <body>
@@ -73,7 +73,7 @@
     </div>
 
 
-    <script src="index.js"></script>
+    <script src="./static/index.js"></script>
 </body>
 
 </html>
