Can't see the cookie

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <button id="loginButton" type="submit">Login</button>
             </form>
-            <p>Don't have an account? <a href="#" onclick="toggleForms()">Register</a></p>
+            <p>Don't have an account? <a onclick="toggleForms()">Register</a></p>
         </div>
 
         <!-- Register Form -->
@@ -68,7 +68,7 @@
                 </div>
                 <button id="registerButton" type="submit">Register</button>
             </form>
-            <p>Already have an account? <a href="#" onclick="toggleForms()">Login</a></p>
+            <p>Already have an account? <a onclick="toggleForms()">Login</a></p>
         </div>
     </div>
 
